# KYC_Agentic

./: .gitignore  CLAUDE.md  Conversational_KYC_Internship_Report (1).docx  KYC_Project_Handover_Windows.docx  README.md  docker-compose.yml
.claude/rules/: agentic-workflow.md  python-fastapi-backend.md  react-frontend.md
apps/api/: Dockerfile  entrypoint.sh  pyproject.toml
apps/api/app/: config.py  main.py  utils.py
apps/api/app/agents/: biometric.py  compliance.py  decision.py  geolocation.py  intake.py  orchestrator.py  validation.py
apps/api/app/db/: models.py  session.py
apps/api/app/db/migrations/: alembic.ini  env.py
apps/api/app/db/migrations/versions/: 0001_initial.py  0002_sessions_email_mobile.py
apps/api/app/graph/: builder.py  checkpointer.py  state.py
apps/api/app/routers/: capture.py  chat.py  confirm.py  files.py  session.py  upload.py
apps/api/app/schemas/: chat.py
apps/api/app/scripts/: reindex_rag.py
apps/api/app/services/: deepface_runner.py  ipwhois_client.py  langfuse_client.py  ollama_client.py  rag.py
apps/api/tests/: test_config.py  test_health.py
apps/api/tests/agents/: test_decision_thresholds.py  test_geolocation_extract.py  test_intake_parsers.py  test_orchestrator_heuristics.py  test_validation_math.py
apps/api/tests/graph/: test_builder_smoke.py
apps/api/tests/services/: test_ipwhois_client.py  test_ollama_client.py
apps/web/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts  (+2 more)
backend/: .env.example  config.py  main.py  requirements.txt
infra/: .env.example  docker-compose.yml
(+41 files in other folders)
